# rust-server

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
