[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.13"
diesel = { version = "2", features = ["postgres"] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.1"
juniper = "0.15"
tokio-pg-mapper = { version = "0.2" }
tokio-pg-mapper-derive =  { version = "0.2" }
deadpool-postgres = { version = "0.10", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"